--- a/public/template/add_wine_new_detail_1.html
+++ b/public/template/add_wine_new_detail_1.html
@@ -63,9 +63,17 @@
                    </div>
                   <div class="required">
                        <label><span>*</span>产区</label>
-                      <select name="">
-                             <option>请选择一级产区</option>
-                    </select>
+                      <div class="areas">
+                          <select name="">
+                                 <option>请选择一级产区</option>
+                        </select>
+                        <select name="">
+                                 <option>请选择一级产区</option>
+                        </select>
+                        <select name="">
+                                 <option>请选择一级产区</option>
+                        </select>
+                    </div>
                   </div>
                    <div class="required">
                        <label><span>*</span>年份</label>
