--- a/app/views/themes/waterfall/cellar_items/_form.html.erb
+++ b/app/views/themes/waterfall/cellar_items/_form.html.erb
@@ -48,7 +48,7 @@
       <%= f.date_select :drinkable_end, :discard_day => true, :discard_month => true, :start_year =>   1990, :end_year => Time.now.year + 150 %>年
     </div>
     <div class="optional">
-      <label>尽自己可见</label>
+      <label>仅自己可见</label>
       <%= f.check_box :private_type %>
     </div>
     <div class="optional">
