--- a/public/template/login.html
+++ b/public/template/login.html
@@ -37,12 +37,12 @@
     </div>
     <div id="wrapper950">
     	<div id="login">
-        	<div class="error">啊哦，邮件地址或密码错误！</div>
+        	<div class="error">啊哦，E-mail或密码错误！</div>
             <div class="login">
                 <div class="boxstyle">
                     <div class="top">欢迎登陆iWine!</div>
                     <div class="mid">
-                      <div class="un"><input class="text" name="" type="text" placeholder="邮件地址" /></div>
+                      <div class="un"><input class="text" name="" type="text" placeholder="E-mail" /></div>
                       <div class="pw"><input class="text"  name="" type="password" placeholder="密码" /></div>
                         <div class="rember_pw">
                             <a href="index.html"><img class="float_r" src="images/common/btn_login.jpg" width="96" height="41" alt="登陆" /></a>
