--- a/public/template/register.html
+++ b/public/template/register.html
@@ -46,11 +46,11 @@
             <div class="boxstyle">
                     <div class="top">注册iWine</div>
                     <div class="mid">
-                      <p>邮件地址<span class="red">*</span></p>
+                      <p>用户名<span class="red">*</span></p>
                           <div class="un">
                               <div class="field_with_errors">
-                              <input class="text" name="" type="text" placeholder="邮件地址" />
-                              <label class="message">该邮件地址已存在</label>
+                              <input class="text" name="" type="text" placeholder="用户名" />
+                              <label class="message">该用户名已存在</label>
                               </div>
                           </div>
                       <p>密码<span class="red">*</span></p>
@@ -60,11 +60,11 @@
                            <label class="message">密码至少为6个字符</label>
                           </div>
                       </div>
-                      <p>邮件地址<span class="red">*</span></p>
+                      <p>E-mail<span class="red">*</span></p>
                           <div class="pw">
                           	<div class="field_with_errors">
-                          	<input class="text"  name="" type="text" placeholder="邮件地址" />
-                            <label class="message">改邮件地址无效</label>
+                          	<input class="text"  name="" type="text" placeholder="E-mail" />
+                            <label class="message">该E-mail地址无效</label>
                           	</div>
                           </div>
                       <p>所在地<span class="red">*</span></p>
