Update errors message
Signed-off-by: Weston <weixuhong@gmail.com>

--- a/app/views/themes/waterfall/devise/registrations/new.html.erb
+++ b/app/views/themes/waterfall/devise/registrations/new.html.erb
@@ -13,11 +13,11 @@
       </div>
       <p>邮件地址<span class="red">*</span></p>
       <div class="pw">
-        <%= f.email_field :email, :class => "text", :placeholder => "邮件地址"%>
+        <%= f.email_field :email, :class => "text", :placeholder => "Email"%>
       </div>
       <p>所在地<span class="red">*</span></p>
       <div class="un">
-           <%= f.text_field :city, :class => "text", :placeholder => "所在地"%>
+           <%= f.text_field :city, :class => "text", :placeholder => "目前所在城市"%>
       </div>
         <div class="submit">
           <span class="float_r">
