--- a/app/views/themes/waterfall/albums/photo.html.erb
+++ b/app/views/themes/waterfall/albums/photo.html.erb
@@ -36,7 +36,11 @@
         </div>
         <div class="info">
           <%= render "photos/liked"%>
-          <%= render "share/sns_icons"%>
+          <%= render "share/sns_icons",
+                     :image_url => sns_image_url(@photo, :thumb_name => :large),
+                     :title => sns_title(@user.username),
+                     :summary => "的照片",
+                     :url => request.url %>
           	<div><%= @photo.views_count %>浏览 | <%= @comments.count %>评论</div>
         </div>
         <div class="comment">
