--- a/app/views/themes/waterfall/wine_details/_new_form.html.erb
+++ b/app/views/themes/waterfall/wine_details/_new_form.html.erb
@@ -18,7 +18,7 @@
       <div class="required">
         <label><span>*</span>年份</label>
         <%= f.date_select :vintage, :discard_day => true, :discard_month => true, :start_year => 1950, :end_year => Time.now.year, :prompt => {:year => "选择年份"} %>年
-        <label class="nv"><%= check_box_tag("wines_register[is_nv]", 1, @register.is_nv.to_i == 1) %>NV/无年份葡萄酒</label>
+        <label class="nv"><%= check_box_tag("wines_register[is_nv]", 1, @register.is_nv.to_i == 1, :id => "check_nv") %>NV/无年份葡萄酒</label>
       </div>
       <div class="required">
         <label><span>*</span>容量</label>
