--- a/public/template/album_photo_list.html
+++ b/public/template/album_photo_list.html
@@ -5,6 +5,7 @@
 <title>iWine</title>
 <link href="stylesheets/main.css" rel="stylesheet" type="text/css" />
 <link href="stylesheets/hp.css" rel="stylesheet" type="text/css" />
+<script src="javascripts/input.js" type="text/javascript"></script>
 </head>
 
 <body>
@@ -14,7 +15,7 @@
             <form action="search.html">
                 <div id="top_search">
                     <input class="search_btn" name="" type="image" src="images/icon/search.gif"/>
-                    <input class="search" name="" type="text" placeholder="搜索酒款、酒庄" />
+                    <input class="search" type="text" value="搜索酒款、酒庄" onclick="clearDefaultText(this,'搜索酒款、酒庄')"  />
                 </div>
             </form>
             <div id="top_right">
@@ -72,7 +73,7 @@
           <p class="name">鲔鱼莎拉</p>
           <p class="intro">中午在COCO吃了咖喱，色拉不错</p>
           <p class="info">2012-1-28 上传 | <a href="#">删除</a><br/>
-          10浏览 | 5评论 | 2赞</p>
+          10浏览 | 5评论</p>
         </li>
         <li class="photo_des"> <a href="album_photo_detail.html"><img class="cover" src="images/test/pic190_1.jpg" width="191" height="128" alt="cover" /></a>
           <p>标题</p>
@@ -86,63 +87,63 @@
           <p class="name">鲔鱼莎拉</p>
           <p class="intro">中午在COCO吃了咖喱，色拉不错</p>
           <p class="info">2012-1-28 上传 | <a href="#">删除</a><br/>
-          10浏览 | 5评论 | 2赞</p>
+          10浏览 | 5评论</p>
         </li>
         <li class="last"> <a href="album_photo_detail.html"><img class="cover" src="images/test/pic190_1.jpg" width="191" height="128" alt="cover" /></a>
           <p class="name">鲔鱼莎拉</p>
           <p class="intro">中午在COCO吃了咖喱，色拉不错</p>
           <p class="info">2012-1-28 上传 | <a href="#">删除</a><br/>
-          10浏览 | 5评论 | 2赞</p>
+          10浏览 | 5评论</p>
         </li>
         <div class="clear"></div>
         <li> <a href="album_photo_detail.html"><img class="cover" src="images/test/pic190_1.jpg" width="191" height="128" alt="cover" /></a>
           <p class="name">鲔鱼莎拉</p>
           <p class="intro">中午在COCO吃了咖喱，色拉不错</p>
           <p class="info">2012-1-28 上传 | <a href="#">删除</a><br/>
-          10浏览 | 5评论 | 2赞</p>
+          10浏览 | 5评论</p>
         </li>
         <li> <a href="album_photo_detail.html"><img class="cover" src="images/test/pic190_1.jpg" width="191" height="128" alt="cover" /></a>
           <p class="name">鲔鱼莎拉</p>
           <p class="intro">中午在COCO吃了咖喱，色拉不错</p>
           <p class="info">2012-1-28 上传 | <a href="#">删除</a><br/>
-          10浏览 | 5评论 | 2赞</p>
+          10浏览 | 5评论</p>
         </li>
         <li> <a href="album_photo_detail.html"><img class="cover" src="images/test/pic190_1.jpg" width="191" height="128" alt="cover" /></a>
           <p class="name">鲔鱼莎拉</p>
           <p class="intro">中午在COCO吃了咖喱，色拉不错</p>
           <p class="info">2012-1-28 上传 | <a href="#">删除</a><br/>
-          10浏览 | 5评论 | 2赞</p>
+          10浏览 | 5评论</p>
         </li>
         <li class="last"> <a href="album_photo_detail.html"><img class="cover" src="images/test/pic190_1.jpg" width="191" height="128" alt="cover" /></a>
           <p class="name">鲔鱼莎拉</p>
           <p class="intro">中午在COCO吃了咖喱，色拉不错</p>
           <p class="info">2012-1-28 上传 | <a href="#">删除</a><br/>
-          10浏览 | 5评论 | 2赞</p>
+          10浏览 | 5评论</p>
         </li>
         <div class="clear"></div>
         <li> <a href="album_photo_detail.html"><img class="cover" src="images/test/pic190_1.jpg" width="191" height="128" alt="cover" /></a>
           <p class="name">鲔鱼莎拉</p>
           <p class="intro">中午在COCO吃了咖喱，色拉不错</p>
           <p class="info">2012-1-28 上传 | <a href="#">删除</a><br/>
-          10浏览 | 5评论 | 2赞</p>
+          10浏览 | 5评论</p>
         </li>
         <li> <a href="album_photo_detail.html"><img class="cover" src="images/test/pic190_1.jpg" width="191" height="128" alt="cover" /></a>
           <p class="name">鲔鱼莎拉</p>
           <p class="intro">中午在COCO吃了咖喱，色拉不错</p>
           <p class="info">2012-1-28 上传 | <a href="#">删除</a><br/>
-          10浏览 | 5评论 | 2赞</p>
+          10浏览 | 5评论</p>
         </li>
         <li> <a href="album_photo_detail.html"><img class="cover" src="images/test/pic190_1.jpg" width="191" height="128" alt="cover" /></a>
           <p class="name">鲔鱼莎拉</p>
           <p class="intro">中午在COCO吃了咖喱，色拉不错</p>
           <p class="info">2012-1-28 上传 | <a href="#">删除</a><br/>
-          10浏览 | 5评论 | 2赞</p>
+          10浏览 | 5评论</p>
         </li>
         <li class="last"> <a href="album_photo_detail.html"><img class="cover" src="images/test/pic190_1.jpg" width="191" height="128" alt="cover" /></a>
           <p class="name">鲔鱼莎拉</p>
           <p class="intro">中午在COCO吃了咖喱，色拉不错</p>
           <p class="info">2012-1-28 上传 | <a href="#">删除</a><br/>
-          10浏览 | 5评论 | 2赞</p>
+          10浏览 | 5评论</p>
         </li>
         <div class="clear"></div>
       </ul>
@@ -151,8 +152,6 @@
 	  </div>
       <div class="share_btn">
       	<div class="btn"><a href="#" class="btn_gray"><span>删除相册</span></a></div>
-        <div class="share float_l">分享到：<a href=" #"><img src="images/icon/sina_s_on.png" alt="新浪" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/tencen_s_on.png" alt="腾讯" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/douban_s_on.png" alt="豆瓣" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/kaixin_s_on.png" alt="开心网" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/renren_s_on.png" alt="人人网" width="17" height="17" align="absmiddle" /></a> |</div>
-        <div class="like float_l"><a href="#" class="icon_like">赞 (3)</a></div>
         <div class="clear"></div>
       </div>
       </div>
