--- a/public/template/aboutus.html
+++ b/public/template/aboutus.html
@@ -5,6 +5,7 @@
 <title>iWine</title>
 <link href="stylesheets/main.css" rel="stylesheet" type="text/css" />
 <link href="stylesheets/about.css" rel="stylesheet" type="text/css" />
+<script src="javascripts/input.js" type="text/javascript"></script>
 </head>
 
 <body>
@@ -14,7 +15,7 @@
             <form action="search.html">
                 <div id="top_search">
                     <input class="search_btn" name="" type="image" src="images/icon/search.gif"/>
-                    <input class="search" name="" type="text" placeholder="搜索酒款、酒庄" />
+                    <input class="search" type="text" value="搜索酒款、酒庄" onclick="clearDefaultText(this,'搜索酒款、酒庄')"  />
                 </div>
             </form>
             <div id="top_right">
@@ -37,8 +38,6 @@
       </ul>
     </div>
     <div id="wrapper950">
-
-
     	<div class="whitespace about">
           <h1 class="main_title">关于爱红酒(iWine)</h1>
           <p>iWine.com<br />
@@ -63,7 +62,6 @@
 			<p>We have no editors but display the original content, no writer in house but every user is the writer, no ranks but whenever user puts a “good”, “like”, “recommend” it contributes to the ranking.
 We sincerely welcome your joining iWine, and wish you a nice stay here with millions of other wine lovers for a better enjoyment of wine.</p>
    	  </div>
-      
     </div>
     <div id="footer">
         <div class="link"><a href="aboutus.html">关于我们</a> | <a href="contactus.html">联系我们</a> | <a href="help.html">帮助中心</a> | <a href="privacy.html">隐私条款</a> | <a href="agreement.html">用户协议</a> | <a href="disclaimer.html">免责声明</a> | <a href="sitemap.html">网站地图</a> | <a href="feedback.html">意见反馈</a></div>
