--- a/public/template/add_wine_searchyear.html
+++ b/public/template/add_wine_searchyear.html
@@ -6,6 +6,7 @@
 <link href="stylesheets/main.css" rel="stylesheet" type="text/css" />
 <link href="stylesheets/hp.css" rel="stylesheet" type="text/css" />
 <link href="stylesheets/add.css" rel="stylesheet" type="text/css" />
+<script src="javascripts/input.js" type="text/javascript"></script>
 </head>
 
 <body>
@@ -15,7 +16,7 @@
             <form action="search.html">
                 <div id="top_search">
                     <input class="search_btn" name="" type="image" src="images/icon/search.gif"/>
-                    <input class="search" name="" type="text" placeholder="搜索酒款、酒庄" />
+                    <input class="search" type="text" value="搜索酒款、酒庄" onclick="clearDefaultText(this,'搜索酒款、酒庄')"  />
                 </div>
             </form>
             <div id="top_right">
@@ -45,7 +46,7 @@
           </div>
               <div class="search mb20">
               	 <p class="notice_b mb20">请输入酒款名称以查询该酒款是否已经存在</p>
-                  <input name="请输入酒款名称" type="text" class="text common_search mr5" placeholder="请输入酒款名称" /><a href="cellar_wine_add_year.html" class="btn_gray"><span>搜索</span></a>
+                  <input name="请输入酒款名称" type="text" class="text common_search mr5" value="请输入酒款名称" onclick="clearDefaultText(this,'请输入酒款名称')" /><a href="cellar_wine_add_year.html" class="btn_gray"><span>搜索</span></a>
               </div>
               <div>
                   <div class="float_r"><span class="notice_b">这些都不是您要找的酒？</span><a href="add_wine_new_detail_1.html" class="btn_gray"><span>添加酒款</span></a></div>
