--- a/public/template/cellar_wine_add_year.html
+++ b/public/template/cellar_wine_add_year.html
@@ -5,6 +5,7 @@
 <title>iWine</title>
 <link href="stylesheets/main.css" rel="stylesheet" type="text/css" />
 <link href="stylesheets/hp.css" rel="stylesheet" type="text/css" />
+<script src="javascripts/input.js" type="text/javascript"></script>
 </head>
 
 <body>
@@ -14,7 +15,7 @@
             <form action="search.html">
                 <div id="top_search">
                     <input class="search_btn" name="" type="image" src="images/icon/search.gif"/>
-                    <input class="search" name="" type="text" placeholder="搜索酒款、酒庄" />
+                    <input class="search" type="text" value="搜索酒款、酒庄" onclick="clearDefaultText(this,'搜索酒款、酒庄')"  />
                 </div>
             </form>
             <div id="top_right">
@@ -71,7 +72,7 @@
           </div>
           <div class="mb20">
               <div class="float_r"><span class="notice_b">这些都不是您要找的酒？</span><a href="#" class="btn_gray"><span>添加酒款</span></a></div>
-              <div class="search"><input name="请输入酒款名称" type="text" class="text common_search mr5" placeholder="请输入酒款名称" /><a href="cellar_wine_add_1.html" class="btn_gray"><span>搜索</span></a></div>
+              <div class="search"><input name="请输入酒款名称" type="text" class="text common_search mr5" value="请输入酒款名称" onclick="clearDefaultText(this,'请输入酒款名称')" /><a href="cellar_wine_add_1.html" class="btn_gray"><span>搜索</span></a></div>
               <div class="clear"></div>
           </div>
           <div>
