--- a/public/template/feedback.html
+++ b/public/template/feedback.html
@@ -5,6 +5,7 @@
 <title>iWine</title>
 <link href="stylesheets/main.css" rel="stylesheet" type="text/css" />
 <link href="stylesheets/about.css" rel="stylesheet" type="text/css" />
+<script src="javascripts/input.js" type="text/javascript"></script>
 </head>
 
 <body>
@@ -14,7 +15,7 @@
             <form action="search.html">
                 <div id="top_search">
                     <input class="search_btn" name="" type="image" src="images/icon/search.gif"/>
-                    <input class="search" name="" type="text" placeholder="搜索酒款、酒庄" />
+                    <input class="search" type="text" value="搜索酒款、酒庄" onclick="clearDefaultText(this,'搜索酒款、酒庄')"  />
                 </div>
             </form>
             <div id="top_right">
@@ -54,7 +55,7 @@
             </label></td>
           </tr>
           <tr>
-            <th>邮件地址</th>
+            <th>邮箱地址</th>
             <td><label>
               <input class="text content" type="text" name="textfield2" id="textfield2" />
             </label></td>
