--- a/public/template/friends.html
+++ b/public/template/friends.html
@@ -5,6 +5,7 @@
 <title>iWine</title>
 <link href="stylesheets/main.css" rel="stylesheet" type="text/css" />
 <link href="stylesheets/setting.css" rel="stylesheet" type="text/css" />
+<script src="javascripts/input.js" type="text/javascript"></script>
 </head>
 
 <body>
@@ -14,7 +15,7 @@
             <form action="search.html">
                 <div id="top_search">
                     <input class="search_btn" name="" type="image" src="images/icon/search.gif"/>
-                    <input class="search" name="" type="text" placeholder="搜索酒款、酒庄" />
+                    <input class="search" type="text" value="搜索酒款、酒庄" onclick="clearDefaultText(this,'搜索酒款、酒庄')"  />
                 </div>
             </form>
             <div id="top_right">
@@ -79,9 +80,9 @@
             <div class="gray_box invite">
             	<h3>通过邮件邀请朋友加入</h3>
               <form>
-                  <p><textarea class="text" name="" cols="" rows="" placeholder="输入邮件地址"></textarea>
-                    <textarea class="text" name="" cols="" rows="" placeholder="输入邀请留言"></textarea>
-                  <input class="text" name="" type="text" placeholder="输入你的名字"/></p>
+                  <p><textarea class="text" name="" cols="" rows="" value="请输入邮箱地址" onclick="clearDefaultText(this,'请输入邮箱地址')"></textarea>
+                    <textarea class="text" name="" cols="" rows="" value="请输入邀请留言" onclick="clearDefaultText(this,'请输入邀请留言')"></textarea>
+                  <input class="text" name="" type="text" value="输入你的名字" onclick="clearDefaultText(this,'请输入你的名字')"/></p>
                   <p><a href="#" class="btn_gray"><span>发送邀请</span></a></p>
                   <div class="notice">一次填写多个Email地址请用回车换行分隔，最多支持20个邮箱</div>
               </form>
