--- a/public/template/login.html
+++ b/public/template/login.html
@@ -4,6 +4,8 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <title>iWine</title>
 <link href="stylesheets/main.css" rel="stylesheet" type="text/css" />
+<script src="javascripts/input.js" type="text/javascript"></script>
+<script src="javascripts/input.js" type="text/javascript"></script>
 </head>
 
 <body>
@@ -13,7 +15,7 @@
             <form action="search.html">
                 <div id="top_search">
                     <input class="search_btn" name="" type="image" src="images/icon/search.gif"/>
-                    <input class="search" name="" type="text" placeholder="搜索酒款、酒庄" />
+                    <input class="search" type="text" value="搜索酒款、酒庄" onclick="clearDefaultText(this,'搜索酒款、酒庄')"  />
                 </div>
             </form>
             <div id="top_right">
@@ -42,8 +44,8 @@
                 <div class="boxstyle">
                     <div class="top">欢迎登陆iWine!</div>
                     <div class="mid">
-                      <div class="un"><input class="text" name="" type="text" placeholder="E-mail" /></div>
-                      <div class="pw"><input class="text"  name="" type="password" placeholder="密码" /></div>
+                      <div class="un"><input class="text"  type="text" value="E-mail" onclick="clearDefaultText(this,'E-mail')" /></div>
+                      <div class="pw"><input class="text"  type="password" value="密码" onclick="clearDefaultText(this,'密码')" /></div>
                         <div class="rember_pw">
                             <a href="index.html"><img class="float_r" src="images/common/btn_login.jpg" width="96" height="41" alt="登陆" /></a>
                         <label><input class="checkbox" name="" type="checkbox" value="" /> 记住我</label> 
