--- a/public/template/message_detail.html
+++ b/public/template/message_detail.html
@@ -5,6 +5,7 @@
 <title>iWine</title>
 <link href="stylesheets/main.css" rel="stylesheet" type="text/css" />
 <link href="stylesheets/setting.css" rel="stylesheet" type="text/css" />
+<script src="javascripts/input.js" type="text/javascript"></script>
 </head>
 
 <body>
@@ -14,7 +15,7 @@
             <form action="search.html">
                 <div id="top_search">
                     <input class="search_btn" name="" type="image" src="images/icon/search.gif"/>
-                    <input class="search" name="" type="text" placeholder="搜索酒款、酒庄" />
+                    <input class="search" type="text" value="搜索酒款、酒庄" onclick="clearDefaultText(this,'搜索酒款、酒庄')"  />
                 </div>
             </form>
             <div id="top_right">
@@ -39,7 +40,7 @@
     <div id="wrapper950">
     	<div class="whitespace message">
             <div class="title clearfix">
-                <div class="message_search"><a href="#" class="search_btn">搜索</a><input class="text" name="" type="text" placeholder="查找联系人或私信内容"/><a class="btn_gray" href="#"><span>发送私信</span></a></div>
+                <div class="message_search"><a href="#" class="search_btn">搜索</a><input class="text" name="" type="text" value="查找联系人或私信内容" onclick="clearDefaultText(this,'查找联系人或私信内容')"/><a class="btn_gray" href="#"><span>发送私信</span></a></div>
                 <h1 class="main_title">我的私信</h1>
                 <div class="clear"></div>
             </div>
