--- a/public/template/password_forget.html
+++ b/public/template/password_forget.html
@@ -4,6 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <title>iWine</title>
 <link href="stylesheets/main.css" rel="stylesheet" type="text/css" />
+<script src="javascripts/input.js" type="text/javascript"></script>
 </head>
 
 <body>
@@ -13,7 +14,7 @@
             <form action="search.html">
                 <div id="top_search">
                     <input class="search_btn" name="" type="image" src="images/icon/search.gif"/>
-                    <input class="search" name="" type="text" placeholder="搜索酒款、酒庄" />
+                    <input class="search" type="text" value="搜索酒款、酒庄" onclick="clearDefaultText(this,'搜索酒款、酒庄')"  />
                 </div>
             </form>
             <div id="top_right">
@@ -36,7 +37,6 @@
       </ul>
     </div>
     <div id="wrapper950">
-
     	<div id="login">
         	<div class="error">很遗憾，该邮箱地址不存在...</div>
             <div class="password">
@@ -46,7 +46,7 @@
                         <h2>忘记密码了？</h2>
                         <h3>请输入注册时的邮箱地址，我们会帮助你重置密码。</h3>
                         <div class="clearfix">
-                          <div class="un float_l"><input class="text"  name="" type="password" placeholder="请输入邮箱地址" /></div>
+                          <div class="un float_l"><input class="text"  name="" type="password" /></div>
                             <a class="float_l ml10" href="password_resetmail_notice.html"><img src="images/common/btn_submit.jpg" width="96" height="41" alt="登陆" /></a>
                         </div>
                         <div class="mt10"><a href="login.html">登陆</a> | <a href="register.html">注册</a></div>
@@ -54,11 +54,7 @@
                     <div class="bot"></div>
                 </div>
             </div>
-
-            
         </div>
-    
-
     </div>
 </body>
 </html>
