--- a/public/template/password_reset.html
+++ b/public/template/password_reset.html
@@ -4,6 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <title>iWine</title>
 <link href="stylesheets/main.css" rel="stylesheet" type="text/css" />
+<script src="javascripts/input.js" type="text/javascript"></script>
 </head>
 
 <body>
@@ -13,7 +14,7 @@
             <form action="search.html">
                 <div id="top_search">
                     <input class="search_btn" name="" type="image" src="images/icon/search.gif"/>
-                    <input class="search" name="" type="text" placeholder="搜索酒款、酒庄" />
+                    <input class="search" type="text" value="搜索酒款、酒庄" onclick="clearDefaultText(this,'搜索酒款、酒庄')"  />
                 </div>
             </form>
             <div id="top_right">
@@ -46,11 +47,11 @@
                         	<table width="90%" border="0" cellspacing="0" cellpadding="0">
                               <tr>
                                 <td>新密码</td>
-                                <td><div class="un"><input class="text"  name="" type="password" placeholder="请输入新密码" /></div></td>
+                                <td><div class="un"><input class="text"  name="" type="password" /></div></td>
                               </tr>
                               <tr>
                                 <td>确认密码</td>
-                                <td><div class="un"><input class="text"  name="" type="password" placeholder="请再次输入密码" /></div></td>
+                                <td><div class="un"><input class="text"  name="" type="password" /></div></td>
                               </tr>
                               <tr>
                                 <td>&nbsp;</td>
