--- a/public/template/privacy.html
+++ b/public/template/privacy.html
@@ -5,6 +5,7 @@
 <title>iWine</title>
 <link href="stylesheets/main.css" rel="stylesheet" type="text/css" />
 <link href="stylesheets/about.css" rel="stylesheet" type="text/css" />
+<script src="javascripts/input.js" type="text/javascript"></script>
 </head>
 
 <body>
@@ -14,7 +15,7 @@
             <form action="search.html">
                 <div id="top_search">
                     <input class="search_btn" name="" type="image" src="images/icon/search.gif"/>
-                    <input class="search" name="" type="text" placeholder="搜索酒款、酒庄" />
+                    <input class="search" type="text" value="搜索酒款、酒庄" onclick="clearDefaultText(this,'搜索酒款、酒庄')"  />
                 </div>
             </form>
             <div id="top_right">
@@ -42,9 +43,9 @@
           <h2>总则</h2>
           <p>爱红酒网站（iWine）尊重您个人的隐私权。此项政策概述可供收集的个人身体资料内容及如何使用这些资料。并且，也说明与您的隐私相关的其它重要事项。</p>
           <h2>1. 资料收集</h2>
-          <p>我们仅收集通过应用程序、网站或电子邮件自愿提供的个人身份资料，如姓名、职务、公司名称、地址、电话号码或电子邮件地址等。为改进我们的服务并满足您的需求，我们会在您授权后搜集并记录一些综合性的资料，如地理位置。</p>
+          <p>我们仅收集通过应用程序、网站或电子邮件自愿提供的个人身份资料，如姓名、职务、公司名称、地址、电话号码或电子邮箱地址等。为改进我们的服务并满足您的需求，我们会在您授权后搜集并记录一些综合性的资料，如地理位置。</p>
           <h2>2. 资料使用</h2>
-          <p>在收集任何个人身份资料之前，我们将会向您说明可能如何使用您的资料。我们将利用您所提供的资料来答复您的问询、提供您所订购的产品及服务，或是追踪观察您与InstaPrint的订单进展情况。我们也许会授权第三方来收集、追踪和处理这些资料。如果您已通过电子手段向我们提供个人资料并欲删除或修改这些资料，请通过电子邮件地址 <a href="mailto:info@sidways.com">info@sidways.com</a>与我们联系。我们将竭尽所能来满足您的要求。</p>
+          <p>在收集任何个人身份资料之前，我们将会向您说明可能如何使用您的资料。我们将利用您所提供的资料来答复您的问询、提供您所订购的产品及服务，或是追踪观察您与InstaPrint的订单进展情况。我们也许会授权第三方来收集、追踪和处理这些资料。如果您已通过电子手段向我们提供个人资料并欲删除或修改这些资料，请通过电子邮箱地址 <a href="mailto:info@sidways.com">info@sidways.com</a>与我们联系。我们将竭尽所能来满足您的要求。</p>
           <h2>3. 儿童与家长</h2>
           <p>爱红酒网站含有大量含酒精饮料产品的内容。依据中国和世界其他国家法律，用户需达到当地或所属国家的法定饮酒年龄才可使用本站服务。本站严格恪守这一法律要求。我们不接受未达到法定饮酒年龄之用户注册。如果您发现您的未成年子女通过某种非法手段注册成为本站用户，请通过上述联络方式与我们接洽，我们将第一时间冻结并尽快删除其账户。</p>
           <h2>4. 其他重要事项</h2>
