--- a/public/template/register.html
+++ b/public/template/register.html
@@ -4,6 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <title>iWine</title>
 <link href="stylesheets/main.css" rel="stylesheet" type="text/css" />
+<script src="javascripts/input.js" type="text/javascript"></script>
 </head>
 
 <body>
@@ -13,7 +14,7 @@
             <form action="search.html">
                 <div id="top_search">
                     <input class="search_btn" name="" type="image" src="images/icon/search.gif"/>
-                    <input class="search" name="" type="text" placeholder="搜索酒款、酒庄" />
+                    <input class="search" type="text" value="搜索酒款、酒庄" onclick="clearDefaultText(this,'搜索酒款、酒庄')"  />
                 </div>
             </form>
             <div id="top_right">
@@ -49,26 +50,26 @@
                       <p>用户名<span class="red">*</span></p>
                           <div class="un">
                               <div class="field_with_errors">
-                              <input class="text" name="" type="text" placeholder="用户名" />
+                              <input class="text" name="" type="text"  />
                               <label class="message">该用户名已存在</label>
                               </div>
                           </div>
                       <p>密码<span class="red">*</span></p>
                           <div class="pw">
                           	<div class="field_with_errors">
-                            <input class="text"  name="" type="password" placeholder="密码" />
+                            <input class="text"  name="" type="password" />
                            <label class="message">密码至少为6个字符</label>
                           </div>
                       </div>
                       <p>E-mail<span class="red">*</span></p>
                           <div class="pw">
                           	<div class="field_with_errors">
-                          	<input class="text"  name="" type="text" placeholder="E-mail" />
+                          	<input class="text"  name="" type="text" />
                             <label class="message">该E-mail地址无效</label>
                           	</div>
                           </div>
                       <p>所在地<span class="red">*</span></p>
-                          <div class="pw"><input class="text"  name="" type="text" placeholder="所在地" /></div>
+                          <div class="pw"><input class="text"  name="" type="text" /></div>
                       <div class="submit">
                       	<span class="float_r agree">
                         	<div class="field_with_errors">
