--- a/public/template/search_wine.html
+++ b/public/template/search_wine.html
@@ -5,6 +5,7 @@
 <title>iWine</title>
 <link href="stylesheets/main.css" rel="stylesheet" type="text/css" />
 <link href="stylesheets/search.css" rel="stylesheet" type="text/css" />
+<script src="javascripts/input.js" type="text/javascript"></script>
 </head>
 
 <body>
@@ -14,7 +15,7 @@
             <form action="search.html">
                 <div id="top_search">
                     <input class="search_btn" name="" type="image" src="images/icon/search.gif"/>
-                    <input class="search" name="" type="text" placeholder="搜索酒款、酒庄" />
+                    <input class="search" type="text" value="搜索酒款、酒庄" onclick="clearDefaultText(this,'搜索酒款、酒庄')"  />
                 </div>
             </form>
             <div id="top_right">
@@ -41,7 +42,7 @@
         	<div class="left">
             	<div class="searchbox">
                 	<a href="#" class="btn_gray float_r"><span>搜索</span></a>
-                    <input class="text" name="" type="text" placeholder="请输入酒款或酒庄的名称" />
+                    <input class="text" name="" type="text" value="请输入酒款或酒庄的名称" onclick="clearDefaultText(this,'请输入酒款或酒庄的名称')" />
                 </div>
                 <div class="clear"></div>
 <div class="tabs">
