--- a/public/template/wine_follower_list.html
+++ b/public/template/wine_follower_list.html
@@ -7,6 +7,7 @@
 <link href="stylesheets/wine.css" rel="stylesheet" type="text/css" />
 <link href="stylesheets/thumb.css" rel="stylesheet" type="text/css" />
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3/jquery.min.js"></script>
+<script src="javascripts/input.js" type="text/javascript"></script>
 </head>
 
 <body>
@@ -16,7 +17,7 @@
             <form action="search.html">
                 <div id="top_search">
                     <input class="search_btn" name="" type="image" src="images/icon/search.gif"/>
-                    <input class="search" name="" type="text" placeholder="搜索酒款、酒庄" />
+                    <input class="search" type="text" value="搜索酒款、酒庄" onclick="clearDefaultText(this,'搜索酒款、酒庄')"  />
                 </div>
             </form>
             <div id="top_right">
