--- a/app/views/themes/waterfall/settings/update_password.html.erb
+++ b/app/views/themes/waterfall/settings/update_password.html.erb
@@ -7,19 +7,20 @@
    <%= form_for @user, 
    :validate => true, 
    :url => url_for(:action => :update_password ), 
-   :html => { :method => :put, :id => :form } do |f| %>
-
-   
+   :html => { :method => :put, :id => :form } do |f| %>   
    <%= f.hidden_field :reset_password_token %>
    <div class="required">
+     <label><span>*</span>当前密码</label>
+     <%= f.password_field :current_password, :class => "text name", :validate => { :presence => true} %>  
+   </div>
+
+   <div class="required">
      <label><span>*</span>新密码</label>
-     <%= f.password_field :password, :class => "text name" %>
-     <span class="error">密码不能少于6位字符</span> 
+     <%= f.password_field :password, :class => "text name", :validate => { :presence => true, :confirmation => true } %>  
    </div>
    <div class="required">
      <label><span>*</span>确认密码</label>
      <%= f.password_field :password_confirmation, :class => "text name" %>
-     <span class="error">两次密码输入不一致</span>
    </div>
    <div class="mt10 optional">
      <label>&nbsp;</label>
