Bugs: fixed placeholder for ie.
Signed-off-by: Weston <weixuhong@gmail.com>

--- a/app/views/themes/waterfall/layouts/application.html.erb
+++ b/app/views/themes/waterfall/layouts/application.html.erb
@@ -114,6 +114,9 @@
           }
           getMessageCount();
         <% end %>
+
+        // Support Placeholder For All Browers
+        $('input[placeholder], textarea[placeholder]').placeholder();
       </script>
   </body>
 </html>
