--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -14,7 +14,7 @@
         <table width="100%" border="0" cellspacing="0" cellpadding="0">
           <tr>
             <th width="110" class=""><span class="red">*</span><%= f.label :email %></th>
-            <td width=""><%= f.email_field :email, :class => "text basic-input", :validate => { :presence => true, :uniqueness => true}  %> <span class="tips">用来登陆Patrik，接受到激活邮件才能完成注册</span></td>
+            <td width=""><%= f.email_field :email, :class => "text basic-input", :validate => { :presence => true, :uniqueness => true}  %> <span class="tips">用来登录Patrik，接受到激活邮件才能完成注册</span></td>
           </tr>
           <tr>
             <th><span class="red">*</span><%= f.label :password %></th>
