--- a/app/views/themes/waterfall/comments/_comment_list.html.erb
+++ b/app/views/themes/waterfall/comments/_comment_list.html.erb
@@ -94,7 +94,7 @@
 			<% end %>
 
 			<% else %>
-			<p><%= link_to "登陆发表评论", login_path() %></p>
+			<p><%= link_to "登录发表评论", login_path() %></p>
 			<% end %>
 		</div>
 
