--- a/app/views/themes/waterfall/devise/passwords/edit.html.erb
+++ b/app/views/themes/waterfall/devise/passwords/edit.html.erb
@@ -34,7 +34,7 @@
 						<td>&nbsp;</td>
 						<td>
 							<%= link_to "javascript:void(0)", :onclick => "$(this).parents('form').submit()" do %>
-								<%= theme_image_tag "common/btn_submit.jpg", :width => 96, :height => 41, :alt => "登陆" %>
+								<%= theme_image_tag "common/btn_submit.jpg", :width => 96, :height => 41, :alt => "登录" %>
 							<% end %>
 						</td>
 					</tr>
