--- a/app/views/themes/waterfall/devise/registrations/new.html.erb
+++ b/app/views/themes/waterfall/devise/registrations/new.html.erb
@@ -20,7 +20,7 @@
            <%= f.text_field :city, :class => "text", :placeholder => "目前所在城市"%>
       </div>
         <div class="submit">
-          <span class="float_r">
+          <span class="float_r agree">
               <%= f.check_box :agree_term, :checked => "checked" %>
               我已阅读并同意
               <%= link_to "使用条款", "/private" %>
