--- a/app/views/themes/waterfall/layouts/_user_fragment.html.erb
+++ b/app/views/themes/waterfall/layouts/_user_fragment.html.erb
@@ -43,7 +43,7 @@
     </li>
     <li>
      <%= link_to new_user_session_path, :class => 'btn_green' do  %>
-      <span>登陆</span>
+      <span>登录</span>
      <% end %>
     </li>
   </ul>
