--- a/app/views/themes/waterfall/users/register_success.html.erb
+++ b/app/views/themes/waterfall/users/register_success.html.erb
@@ -4,7 +4,7 @@
   我们已将激活邮件发送至您的邮箱：
   <%= params[:email] %>
   <br />
-  请登陆邮箱并激活，即可完成注册！
+  请登录邮箱并激活，即可完成注册！
 </div>
 <div class="mt30">
   <p>没有收到激活邮件？</p>
