--- a/public/template/agreement.html
+++ b/public/template/agreement.html
@@ -96,7 +96,7 @@
                 <li>
                 	<h2>5. 用户账户、密码与安全</h2>
                     <ul>
-                        <li>5.1. 完成本站服务的注册程序并成功注册之后，您可使用您的账号和密码，登陆到您在本站的帐号（下称“帐号”）。保护您的帐号安全，是您的责任。</li>
+                        <li>5.1. 完成本站服务的注册程序并成功注册之后，您可使用您的账号和密码，登录到您在本站的帐号（下称“帐号”）。保护您的帐号安全，是您的责任。</li>
                         <li>5.2. 用户将对用户名和密码安全负全部责任。当您的帐号遭到未获授权的使用，或者发生其它任何安全问题时，您将立即通知本站。</li>
                         <li>5.3 每个用户都要对以其用户名进行的所有活动和事件负全责。用户若发现任何非法使用用户帐户或存在安全漏洞的情况，请立即通告本站。</li>
                         <li>5.4 每个用户都要对其帐号中的所有行为和事件负全责。如果您未保管好自己的帐号和密码而对您、本站或第三方造成的损害，您将负全部责任。</li>
