--- a/public/template/header_logout.html
+++ b/public/template/header_logout.html
@@ -21,7 +21,7 @@
             <div id="top_right">
             	<ul>
                 	<li><a href="#" class="btn_green"><span>注册</span></a></li>
-                    <li><a href="#" class="btn_green"><span>登陆</span></a></li>
+                    <li><a href="#" class="btn_green"><span>登录</span></a></li>
                 </ul>
             </div>
             <div class="clear"></div>
