--- a/public/template/password_reset_success.html
+++ b/public/template/password_reset_success.html
@@ -38,7 +38,7 @@
     </div>
     <div id="wrapper950">
     	<div id="login">
-        	<div class="success">已成功重置密码，可以再次登陆iWine啦！</div>
+        	<div class="success">已成功重置密码，可以再次登录iWine啦！</div>
         </div>
     </div>
 </body>
