--- a/public/template/register_success.html
+++ b/public/template/register_success.html
@@ -48,7 +48,7 @@
             我们已将激活邮件发送至您的邮箱：
             xiaoying@test.com 
             <br />
-        请登陆邮箱并激活，即可完成注册！</div>
+        请登录邮箱并激活，即可完成注册！</div>
         <div class="mt30">
         	<p>没有收到激活邮件？</p>
         	<p>1 请确保邮箱地址是否正确，如果错误就请<a href="register.html">重新注册</a>一次吧<br />
