--- a/app/views/themes/waterfall/devise/passwords/new.html.erb
+++ b/app/views/themes/waterfall/devise/passwords/new.html.erb
@@ -13,11 +13,11 @@
           </div>
           
           <%= link_to "javascript:void(0);", :class => "float_l ml10 save" do %>
-            <%= image_tag "/assets/waterfall/images/common/btn_submit.jpg", :alt => "登陆", :width => "96", :height => "41" %>
+            <%= image_tag "/assets/waterfall/images/common/btn_submit.jpg", :alt => "登录", :width => "96", :height => "41" %>
           <% end %>
         </div>
         <div class="mt10">
-          <%= link_to "登陆", login_path %> |
+          <%= link_to "登录", login_path %> |
           <%= link_to "注册", register_path %>
         </div>
       </div>
