--- a/app/views/themes/waterfall/users/_text_info.html.erb
+++ b/app/views/themes/waterfall/users/_text_info.html.erb
@@ -4,7 +4,7 @@
 			<p class="mb10 f14">已经有Patrick账户了？</p>
 			<p>
 				<%= link_to "/login", :class => "button_green" do  %>
-				<span>直接登陆</span>
+				<span>直接登录</span>
 				<% end %>
 
 			</p>
