--- a/app/views/themes/waterfall/wineries/_winery_detail.html.erb
+++ b/app/views/themes/waterfall/wineries/_winery_detail.html.erb
@@ -53,7 +53,7 @@
            <%= link_to  new_winery_comment_path(@winery.id, :do => "follow"), :class => [:btn_gray_b, :mr5, :ajax], :remote => true do %>
                <span>关注</span>
            <% end %>
-           <%# 用户已经登陆， 检查是否已经关注 %>
+           <%# 用户已经登录， 检查是否已经关注 %>
        <% else %>
            <%  if @winery.is_followed? current_user %>
 			<span class="icon_fol mr5">已关注<span class="cancl_fol">
