--- a/public/template/friends_mail_login.html
+++ b/public/template/friends_mail_login.html
@@ -62,7 +62,7 @@
                         </label></td>
                       </tr>
                       <tr>
-                        <th>登陆密码</th>
+                        <th>登录密码</th>
                         <td><label>
                           <input class="text name" type="text" name="textfield2" id="textfield2" />
                         </label></td>
