--- a/public/template/login.html
+++ b/public/template/login.html
@@ -42,12 +42,12 @@
         	<div class="error">啊哦，E-mail或密码错误！</div>
             <div class="login">
                 <div class="boxstyle">
-                    <div class="top">欢迎登陆iWine!</div>
+                    <div class="top">欢迎登录iWine!</div>
                     <div class="mid">
                       <div class="un"><input class="text"  type="text" value="E-mail" onclick="clearDefaultText(this,'E-mail')" /></div>
                       <div class="pw"><input class="text"  type="password" value="密码" onclick="clearDefaultText(this,'密码')" /></div>
                         <div class="rember_pw">
-                            <a href="index.html"><img class="float_r" src="images/common/btn_login.jpg" width="96" height="41" alt="登陆" /></a>
+                            <a href="index.html"><img class="float_r" src="images/common/btn_login.jpg" width="96" height="41" alt="登录" /></a>
                         <label><input class="checkbox" name="" type="checkbox" value="" /> 记住我</label> 
                             | <a href="password_forget.html">忘记密码了？</a>
                             <div class="clear"></div>
