--- a/public/template/password_reset.html
+++ b/public/template/password_reset.html
@@ -55,7 +55,7 @@
                               </tr>
                               <tr>
                                 <td>&nbsp;</td>
-                                <td><a class="" href="password_reset_success.html"><img src="images/common/btn_submit.jpg" width="96" height="41" alt="登陆" /></a></td>
+                                <td><a class="" href="password_reset_success.html"><img src="images/common/btn_submit.jpg" width="96" height="41" alt="登录" /></a></td>
                               </tr>
                             </table>
                     </div>
