--- a/app/views/themes/waterfall/layouts/application.html.erb
+++ b/app/views/themes/waterfall/layouts/application.html.erb
@@ -19,7 +19,7 @@
         </div>
         <div id="top_search">
           <%= theme_image_submit_tag "icon/search.gif", :class => :search_btn , :id=>:search_btn %>
-          <input class="search" id="hot_search" name="" type="text" />
+          <input class="search" id="hot_search" name="" type="text" placeholder="搜索酒款、酒庄" />
         </div>
         <div class="search_scroll" id="search_scroll" style="display: none;z-index: 999;"></div>
         <div id="top_right">
