--- a/app/views/themes/waterfall/albums/index.html.erb
+++ b/app/views/themes/waterfall/albums/index.html.erb
@@ -11,7 +11,7 @@
           <% end %>
         </a>
       </div>
-      <h1>我的相册 <span class="font12">(共<%= @albums.count %>个)</span></h1>
+      <h1>相册 <span class="font12">(共<%= @albums.count %>个)</span></h1>
       <div class="clear"></div>
 </div>
 <ul class="album_list">
