--- a/app/views/themes/waterfall/cellars/show.html.erb
+++ b/app/views/themes/waterfall/cellars/show.html.erb
@@ -7,3 +7,12 @@
 <%= render "show_cellar" %>
 </div>
 </div>
+<script type="text/javascript" charset="utf-8">
+    $('#search_order').change(function(){
+        wine_name = $("input[name='wine_name']").val();
+        order_url = "/users/<%= @user.id %>/cellars/<%= @cellar.id %>?search_order=" + $(this).attr('value');
+        url = wine_name ? order_url + "&wine_name=" + wine_name : order_url;
+        window.open(url, "_self");
+        return false;
+    });
+</script>
